# ethereum-settlement

./: .dockerignore  .env.api.example  .env.rollup.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.rollup.yaml  compose.yaml  docker-compose.yaml
api/: Cargo.toml  README.md
api/migrations/: 0001_create_proof_jobs.sql  0002_add_executed_status.sql
api/src/: ethereum.rs  main.rs  prover.rs
contracts/: foundry.toml  remappings.txt
contracts/src/: EthereumZekoBridge.sol  ZekoProofVerifier.sol  ZekoSettlement.sol
contracts/test/: EthereumZekoBridge.t.sol  WithdrawalClaimGas.t.sol  ZekoProofVerifierGroth16.t.sol  ZekoSettlementGroth16.t.sol
docs/: CNAME  Gemfile  _config.yml  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  index.ts  style.css
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/assets/js/: docs.js
docs/content/: architecture.md  index.md  overview.md
docs/content/protocol/: deposit-bridge.md  settlement.md  withdrawals.md
docs/content/public/: site.webmanifest
docs/content/reference/: cloudflare.md  commands.md  security-model.md
lib/src/: lib.rs
program/bridge/: Cargo.toml
program/bridge/src/: main.rs
program/withdraw/: Cargo.toml
proofs/: bridge-input-200.json  bridge-input.json  queries.md  withdraw-input.json
rollup/: README.md
rollup/scripts/: deploy.sh  generate-config-and-keys.sh
script/: Cargo.toml
script/src/: lib.rs
tools/zeko-action-state/: README.md  package-lock.json  package.json  tsconfig.json
(+2 files in other folders)
