[package]
name = "zeko-proof-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
alloy = { version = "1.0", features = ["contract", "provider-http", "reqwest-rustls-tls", "signer-local"] }
axum = "0.7"
bincode = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp1-sdk = { version = "6.1.0", features = ["network"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeko_sp1_lib = { path = "../lib" }
zkapp-script = { path = "../script" }
